--- a/In-ClassExercise/CS03-InClass.htm
+++ b/In-ClassExercise/CS03-InClass.htm
@@ -81,6 +81,9 @@
         less
         than 1,184,911 km2 (457,497 sq mi), a 41% decline from the area estimated in the mid-1990s.[7]
     </p>
+
+    <hr>
+    <a href="low.html">List of Work</a>
 </body>
 
 </html>
