--- a/In-ClassExercise/low.html
+++ b/In-ClassExercise/low.html
@@ -9,7 +9,7 @@
     <h3>CS01 - <a href="CS01-InClass.html">InClass</a> </h3>
     <h3>CS02 - <a href="index.html">InClass</a> </h3>
     <h3>CS03 - <a href="CS03-InClass.htm">InClass</a> </h3>
-    <h3>CS04 - <a href="">InClass</a> </h3>
+    <h3>CS04 - <a href="CS04-InClass.html">InClass</a> </h3>
     <h3><a href="https://github.com/prafful187/resources/blob/master/project.md#project-proposal">Project Proposal</a> </h3>
 
     <hr>
@@ -18,3 +18,15 @@
         <img src="home.jpg" alt="Home">
     </a>
 </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
