--- a/In-ClassExercise/CS01-InClass.html
+++ b/In-ClassExercise/CS01-InClass.html
@@ -8,7 +8,7 @@
         <h1>All about Prafful Jain <sup>&reg;</sup></h1>
 
         <hr>
-        <img src="code.jpg" height="300" alt="html code" title="html for life">
+        <img src="Images/code.jpg" height="300" alt="html code" title="html for life">
 
         <hr>
         <h2>this is my first time coding</h2>
