--- a/In-ClassExercise/CS05-InClass.htm
+++ b/In-ClassExercise/CS05-InClass.htm
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>CS3-InClass</title>
+    <title>CS05-InClass</title>
 
 </head>
 
@@ -16,6 +16,10 @@
              hr {width:75%; color:#800000;} 
              img {float:left; border-width:5px; border-color:red; border-style:solid}
              body {margin:10px 50px 10px 50px}
+
+             p#border {color: red; border-style: dotted; border-width: 3px}
+             h2#green {color:green}
+             .pj {color: blue; text-decoration: underline; font-style: italic}
               </style>
 
     <h1> This line demonstrates H1 </h1>
@@ -25,13 +29,13 @@
     <hr>
 
     <h1>Quote One from Winston Churchill </h1>
-    <p>
+    <p class="pj">
         Criticism may not be agreeable, but it is necessary. It fulfils the same function as pain in the human body. It
         calls attention
         to an unhealthy state of things.
     </p>
 
-    <h3>Quote Two from Winston Churchill </h3>
+    <h3 class="pj">Quote Two from Winston Churchill </h3>
 
     <p>
         Courage is rightly esteemed the first of human qualities... because it is the quality which guarantees all
@@ -40,13 +44,13 @@
     </p>
 
 
-    <h2> Quote Three from Winston Churchill</h2>
+    <h2 id="green"> Quote Three from Winston Churchill</h2>
     <h3> This paragraph will have a border</h3>
-    <p>
+    <p id="border">
         Continuous effort - not strength or intelligence - is the key to unlocking our potential.
     </p>
     <hr>
-    <p>
+    <p class="pj">
         The tiger (Panthera tigris) is the largest cat species, reaching a total body length of up to 3.3 metres (11
         ft) and weighing
         up to 306 kg (670 lb). It is the third largest land carnivore (behind only the Polar bear and the Brown
