--- a/In-ClassExercise/index.html
+++ b/In-ClassExercise/index.html
@@ -12,7 +12,7 @@
         <hr>
         <h2>About Me</h2>
         <p>
-            <img src="formalpicture.jpg" height="300" alt="my picture"> Hey, my name is prafful jain and I an from India. I came to <a href="https://www.babson.edu/">Babson College</a> as it is the one of the best schools for entrepreneurship. My plan after graduating is to work for a consulting firm here in the united states for at least 3-5 years and then eventually move back to india and handle my family business. I feel after gettin a proper education and a valuable job experience, I would be better equiped to lead my family business. </p>
+            <img src="Images/formalpicture.jpg" height="300" alt="my picture"> Hey, my name is prafful jain and I an from India. I came to <a href="https://www.babson.edu/">Babson College</a> as it is the one of the best schools for entrepreneurship. My plan after graduating is to work for a consulting firm here in the united states for at least 3-5 years and then eventually move back to india and handle my family business. I feel after gettin a proper education and a valuable job experience, I would be better equiped to lead my family business. </p>
         <hr>
             <h2>My Interests </h2>
         <p>
