--- a/In-ClassExercise/low.html
+++ b/In-ClassExercise/low.html
@@ -10,6 +10,9 @@
     <h3>CS02 - <a href="index.html">InClass</a> </h3>
     <h3>CS03 - <a href="CS03-InClass.htm">InClass</a> </h3>
     <h3>CS04 - <a href="CS04-InClass.html">InClass</a> </h3>
+    <h3>CS05 - <a href="CS05-InClass.htm">InClass</a> </h3>
+    <h3>CS05.2 - <a href="CS05-InClass_2.htm">InClass</a> </h3>
+
     <h3><a href="https://github.com/prafful187/resources/blob/master/project.md#project-proposal">Project Proposal</a> </h3>
 
     <hr>
