--- a/In-ClassExercise/CS04-InClass.html
+++ b/In-ClassExercise/CS04-InClass.html
@@ -9,7 +9,7 @@
 
 <style>
 ul {/*list-style-type:square;*/}
-body {background-image: url(music.gif.jpg)}
+body {background-image: url(Images/music.gif.jpg)}
 
 </style>
 
@@ -20,7 +20,7 @@ body {background-image: url(music.gif.jpg)}
         <map name="Middlesex">
             <area shape="rect" coords="301,351,330,383" href="https://wellesleyma.gov/" alt="wellesley" title="wellesley" target="_blank">
             <area shape="rect" coords="338,314,360,373" href="http://www.newtonma.gov/" alt="newton" title="newton" target="_blank">
-            <img src="Middlesex.gif" usemap="#Middlesex" alt="middlesex map" title="clickable map"> 
+            <img src="Images/Middlesex.gif" usemap="#Middlesex" alt="middlesex map" title="clickable map"> 
         </map>
     </p>
 
@@ -41,10 +41,10 @@ body {background-image: url(music.gif.jpg)}
 
 <ol>
         
-        <li><a href="https://www.skysports.com/football/teams/france/squad" target="_blank"><img src="France.png" width="100px" length="100px" alt="France"></a>France</li>
-        <li><img src="Croatia.png" width="100px" length="100px" alt="Croatia"> Croatia</li>
-        <li><img src="England.png" width="100px" length="100px" alt="Enland"> Enland</li>
-        <li><img src="Belgium.png" width="100px" length="100px" alt="Belgium"> Belgium</li>
+        <li><a href="https://www.skysports.com/football/teams/france/squad" target="_blank"><img src="Images/France.png" width="100px" length="100px" alt="France"></a>France</li>
+        <li><img src="Images/Croatia.png" width="100px" length="100px" alt="Croatia"> Croatia</li>
+        <li><img src="Images/England.png" width="100px" length="100px" alt="Enland"> Enland</li>
+        <li><img src="Images/Belgium.png" width="100px" length="100px" alt="Belgium"> Belgium</li>
     
 </ol>
 </h2>
