--- a/In-ClassExercise/low.html
+++ b/In-ClassExercise/low.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+        <html lang="en">
     <title>List of Work</title>
     <h1>List of Work- Prafful Jain</h1> 
     <hr>
@@ -13,23 +14,12 @@
     <h3>CS05 - <a href="CS05-InClass.htm">InClass</a> </h3>
     <h3>CS05.2 - <a href="CS05-InClass_2.htm">InClass</a> </h3>
 
-    <h3><a href="https://github.com/prafful187/resources/blob/master/project.md#project-proposal">Project Proposal</a> </h3>
+    <h3><a href="Term_Project/Home_Page.html">Project Proposal</a> </h3>
 
     <hr>
     
     <a href="index.html">
-        <img src="home.jpg" alt="Home">
+        <img src="Images/home.jpg" alt="Home">
     </a>
-</body>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    
 </body>
 </html>
