--- a/In-ClassExercise/low.html
+++ b/In-ClassExercise/low.html
@@ -13,6 +13,11 @@
     <h3>CS04 - <a href="CS04-InClass.html">InClass</a> </h3>
     <h3>CS05 - <a href="CS05-InClass.htm">InClass</a> </h3>
     <h3>CS05.2 - <a href="CS05-InClass_2.htm">InClass</a> </h3>
+    <h3>CS06 - <a href="CS05-InClass.htm">InClass</a> </h3>
+    <h3>CS07 - <a href="CS07-InClass.htm">InClass</a> </h3>
+    <h3>CS08 - <a href="CS08-InClass.htm">InClass</a> </h3>
+    <h3>CNN Header - <a href="CNN.html">InClass</a> </h3>
+    
 
     <h3><a href="Term_Project/Home_Page.html">Project Proposal</a> </h3>
 
