--- a/In-ClassExercise/navexamples.html
+++ b/In-ClassExercise/navexamples.html
@@ -11,6 +11,8 @@
 <body>
     <style>
 
+        ul {background-color}
+
         li {display: block; width: 60px; background-color: peru;}
         
         </style>
