files moved around

--- a/In-ClassExercise/CS08-InClass.html
+++ b/In-ClassExercise/CS08-InClass.html
@@ -91,18 +91,12 @@
                 Please add any comments you have here: <br>
                 <textarea name="comments" cols="50" rows="5">Any Further Comments</textarea>
             </div>
-
             <div>
-                <button
-                    type ="submit" value="submit" name="submit">submit <img src="mailbox.png"
-                </button>
-                
-            </div>
-
-                <div>
-                    <input type="submit" value="Click Me To Submit" />
+                    <button type="submit" name="submit" value="submit">Submit <img src="Images/mailbox.png" height="30px" alt="submit_button">
+                    </button>
                     <input type="reset" value="Reset" />
                 </div>
+
 
                 <!-- <div>
                     Select Your Favorite color
