--- a/In-ClassExercise/Form_Demo.html
+++ b/In-ClassExercise/Form_Demo.html
@@ -72,6 +72,11 @@
                 </div>
 
                 <div>
+                    <button type="submit" name="submit" value="submit">Submit <img src="Images/mailbox.png" height="30px" alt="submit_button">
+                    </button>
+                </div>
+
+                <div>
                     <input type="submit" value="submit" />
                     <input type="reset" value="reset" />
                 </div>
