--- a/In-ClassExercise/low.html
+++ b/In-ClassExercise/low.html
@@ -20,11 +20,12 @@
     
 
     <h3><a href="Term_Project/Home_Page.html">Project Proposal</a> </h3>
+    <h3><a href="pinckcitytourist.com">pinckcitytourist.com</a></h3>
 
     <hr>
     
     <a href="index.html">
-        <img src="Images/home.jpg" alt="Home">
+        <img src="Images/home.jpg" height="150px" width="150px" alt="Home">
     </a>
 </body>
 </html>
