--- a/In-ClassExercise/index.html
+++ b/In-ClassExercise/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>prafful jain homework</title>
 </head>
 
@@ -88,6 +90,4 @@
 
 </body>
 
-
-
-</html>
+</html>>
