--- a/Home Work/hw2-2.html
+++ b/Home Work/hw2-2.html
@@ -14,7 +14,6 @@
         <table>
 
             <caption id="Cap">Soap Survey</caption>
-            <br id="spacingbr">
 
             <tr id="R1">
                 <td>Soap Image</td>
@@ -24,15 +23,14 @@
             </tr>
 
             <tr>
-
-                <td class="image"><img src="Images/soap-2.jpg" alt="Soap Image"></td>
+                <td class="image" align="center"><img src="Images/soap-2.jpg" alt="Soap Image"></td>
                 <td class="radio">
                     <input type="radio" value="Green" name="color" /> Green <br>
                     <input type="radio" value="Gold" name="color" /> Gold (shown) <br>
                     <input type="radio" value="Red" name="color" /> Red
                 </td>
 
-                <td>
+                <td align="center">
                     At $5.00/unit <br>
                     <select name="Intent">
                                 <option value="5">Definitley Buy</option>
@@ -43,7 +41,7 @@
                             </select>
                 </td>
 
-                <td>
+                <td class="feature">
                     <p>
                         <input type="checkbox" name="Feature" value="Shape">Shape <br>
                         <input type="checkbox" name="Feature" value="Size">Size <br>
@@ -54,14 +52,14 @@
             </tr>
 
             <tr>
-                <td class="Image"><img src="Images/soap-1.jpg" alt="Soap Image"></td>
+                <td class="image" align="center"><img src="Images/soap-1.jpg" alt="Soap Image"></td>
                 <td class="radio">
                     <input type="radio" value="Green" name="color" /> Ivory <br>
                     <input type="radio" value="Gold" name="color" /> Sandal Wood (shown) <br>
                     <input type="radio" value="Red" name="color" /> Pink
                 </td>
 
-                <td>
+                <td align="center">
                     At $8.00/unit <br>
                     <select name="Intent">
                                 <option value="5">Definitley Buy</option>
@@ -72,7 +70,7 @@
                             </select>
                 </td>
 
-                <td>
+                <td class="feature">
                     <p>
                         <input type="checkbox" name="Feature" value="Shape">Shape <br>
                         <input type="checkbox" name="Feature" value="Size">Size <br>
