--- a/Home Work/Others/WSJ.html
+++ b/Home Work/Others/WSJ.html
@@ -48,10 +48,12 @@
 
     <div>
         <ul id="row5">
-            <li class="R5"><a class="ROW5" href="">Home</a></li>
-            <li class="R5"><a class="ROW5" href="">World</a></li>
-            <li class="R5"><a class="ROW5" href="">US</a></li>
-            <li class="R5"><a class="ROW5" href="">Politics</a></li>
+            <div class="hprop">
+                <li class="R5"><a class="ROW5" href="">Home</a></li>
+                <li class="R5"><a class="ROW5" href="">World</a></li>
+                <li class="R5"><a class="ROW5" href="">US</a></li>
+                <li class="R5"><a class="ROW5" href="">Politics</a></li>
+            </div>
             <li class="R5"><a class="ROW5" href="">Economy</a></li>
             <li class="R5"><a class="ROW5" href="">Business</a></li>
             <li class="R5"><a class="ROW5" href="">Tech</a></li>
@@ -66,6 +68,7 @@
             </li>
         </ul>
     </div>
+    <hr>
 </body>
 
 </html>
