--- a/Home Work/hw2-1.html
+++ b/Home Work/hw2-1.html
@@ -127,4 +127,6 @@
 
 </body>
 
+<!-- "I, Prafful Jain, pledge my honor that I have neither recieved nor provided unauthorized assistance during the completion of this work " -->
+
 </html>
