--- a/Home Work/hw2-2.html
+++ b/Home Work/hw2-2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Form</title>
-    <link rel="stylesheet" href="hw2form.css" type="text/css" />
+    <link rel="stylesheet" href="hw2-2cs.css" type="text/css" />
 </head>
 
 <body>
@@ -119,5 +119,7 @@
     </div>
 
 </body>
+
+<!-- "I, Prafful Jain, pledge my honor that I have neither recieved nor provided unauthorized assistance during the completion of this work " -->
 
 </html>
