--- a/Term_Project/index.html
+++ b/Term_Project/index.html
@@ -108,7 +108,7 @@
 
     <p>
         <video autoplay controls muted>
-        <source src="TP_Images/Jaipurvid.mp4" type="video/mp4" >
+        <source src="TP_Images/jaipur short vid.mp4" type="video/mp4" >
     </video>
     </p>
 
