--- a/In-ClassExercise/low.html
+++ b/In-ClassExercise/low.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+
 <head>
-        <html lang="en">
+    <html lang="en">
     <title>List of Work</title>
-    <h1>List of Work- Prafful Jain</h1> 
+    <h1>List of Work- Prafful Jain</h1>
     <hr>
 </head>
 
@@ -17,15 +18,21 @@
     <h3>CS07 - <a href="CS07-InClass.htm">InClass</a> </h3>
     <h3>CS08 - <a href="CS08-InClass.htm">InClass</a> </h3>
     <h3>CNN Header - <a href="CNN.html">InClass</a> </h3>
-    
+    <h3>CS11 - <a href="CS08-InClass.htm">InClass</a> </h3>
+    <h3>CS12 - <a href="CS08-InClass.htm">InClass</a> </h3>
+    <h3>CS13 - <a href="CS08-InClass.htm">InClass</a> </h3>
+    <h3>CS14 - <a href="CS08-InClass.htm">InClass</a> </h3>
+    <h3>CS15 - <a href="CS08-InClass.htm">InClass</a> </h3>
+
 
     <h3><a href="Term_Project/Home_Page.html">Project Proposal</a> </h3>
     <h3><a href="pinckcitytourist.com">pinckcitytourist.com</a></h3>
 
     <hr>
-    
+
     <a href="index.html">
         <img src="Images/home.jpg" height="150px" width="150px" alt="Home">
     </a>
 </body>
+
 </html>
